<resources>
    <!-- System and Titles -->
    <string name="app_name">ColorEaters</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level_menu">LevelMenuActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="title_activity_lose">LoseActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="copyright_advise">This app is protected under copyright. All rights reserved.</string>
    <string name="title_activity_main_level_menu">MainLevelMenuActivity</string>

    <!-- Main Menu -->
    <string name="play">PLAY!</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="about">ABOUT</string>
    <string name="settings">SETTINGS</string>

    <!-- Lose and Win -->
    <string name="lose_message">You lost :(</string>
    <string name="win_message">You won!</string>
    <string name="restart">Restart</string>
    <string name="back">Back</string>
    <string name="next_level">Next Level</string>

    <!-- Level Menus -->
    <string name="choose_level_package">Choose Level Package: </string>
    <string name="level_package">Level package </string>


    <!-- Help -->
    <string name="help1">Drag an eater or cake to move it. You can move it to a cell right next to it (no diagonals), if it is occupied then you will swap the two objects!</string>
    <string name="help2">The eaters will eat any continuous group of cakes of their color they touch. Your goal is to eat all the cake in the given number of moves</string>
    <string name="help3">The red X can\'t be moved, go around it!</string>
    <string name="help4">Flying Fatsos can move anywhere that\'s empty, but then they disappear!</string>
    <string name="help5">Frozen Cake will unfrozen when eaten, but isn\'t eaten right away, and prevents the eating to spread!</string>

    <!-- About -->
    <string name="about1">This game was made in Portugal by João Afonso</string>
    <string name="about2">This game is protected under copyright. All rights reserved</string>
    <string name="about3">Page: https://www.facebook.com/coloreaters/</string>
    <string name="about4">Contact: joaopedrosilvaafonso@gmail.com</string>
    <string name="about5">This was a personal project. If you have any sugestions, don\'t hesitate to give feedback!</string>
    <string name="sound_credits">Sound credits: http://www.freesfx.co.uk and http://soundbible.com</string>

    <!-- Game -->
    <string name="ad_id">ca-app-pub-1592275686601503/5532777073</string>
    <!-- test: ca-app-pub-3940256099942544/6300978111
     real: ca-app-pub-1592275686601503/5532777073-->
    <string name="moves_left">Moves Left: </string>
    <string name="level_indicator">Level: </string>
    <string name="moves_large">Moves</string>
    <string name="left_large">Left:</string>

    <!-- Settings -->
    <string name="animation_on">Animations are on</string>
    <string name="sound_on">Sound is on</string>
    <string name="animation_off">Animations are turned off</string>
    <string name="sound_off">Sound is turned off</string>
    <string name="turn_sound_on">TURN SOUND ON</string>
    <string name="turn_sound_off">TURN SOUND OFF</string>
    <string name="turn_animation_on">TURN ANIMATION ON</string>
    <string name="turn_animation_off">TURN ANIMATION OFF</string>


</resources>
