<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"

    tools:context="com.empire_of_science.joao.coloreaters2.Activity_GameActivity">

    <TextView
        android:id="@+id/moves_left"
        android:text="@string/moves_left"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/moves_left"/>

    <Button
        android:id="@+id/restarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:layout_toRightOf="@+id/moves_left"
        android:layout_toEndOf="@+id/moves_left"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="restart"/>

    <com.empire_of_science.joao.coloreaters2.GameView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/restarter"
        android:id="@+id/gameV"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
